--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.17.2",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
