--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^4.17.2",
     "axios": "^0.24.0",
     "date-fns": "^2.27.0",
+    "firebase": "^9.6.0",
     "pubsub-js": "^1.9.4",
     "react": "^17.0.2",
     "react-datepicker": "^4.4.0",
